# pyotecmalabar

./: README.md  README.rst  SoapAdapter.py  dev-requirements.txt  setup.cfg
malabar/: __init__.py  __main__.py  config.py  download.py  feeder.py  malabar.py  ovf.py
tests/: test_malabar.py
