[metadata]
name = malabar
author =
author-email =
summary =
description-file = README.rst
classifier =
    Development Status :: 4 - Beta
        Environment :: Console
        Environment :: AWS
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        Operating System :: OS Independent
        Programming Language :: Python

[files]
packages =
    malabar
data_files =
    etc/malabar = etc/*

[entry_points]
console_scripts =
    malabar_cli = malabar.__main__:main
