[metadata]
name = malabar
author = Rémy Tomasetto
author-email =Remy.Tomasetto@alcatel-lucent.com
summary = Otec Template test stuff
description-file = README.rst
classifier =
    Development Status :: 1 - Planning
        Environment :: Console
        Environment :: Debian
        Intended Audience :: Developers
        Operating System :: Linux
        Programming Language :: Python

[files]
packages =
    malabar
data_files =
    etc/malabar = etc/*

[entry_points]
console_scripts =
    malabar_cli = malabar.__main__:main
